updated css for editor container to make sure it stays visible on page when scrolling

--- a/src/Tools/css-tester/css-tester.css
+++ b/src/Tools/css-tester/css-tester.css
@@ -69,7 +69,7 @@ content-header .edit-button{
 }
 /*Edit Container*/
 .edit-container{
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0px;
     width: 100%;
@@ -125,12 +125,6 @@ content-header .edit-button{
     overflow-y: scroll;
     padding: 0 7px;
 }
-.btn{
-    border: unset;
-    border-radius: 4px;
-    padding: 8px 16px;
-    cursor: pointer;
-}
 .edit-footer{
     display: flex;
     justify-content: center;
@@ -138,6 +132,12 @@ content-header .edit-button{
     height: 50px;
     border-top: 1px solid #000;
     background-color: #ddd;
+}
+.btn{
+    border: unset;
+    border-radius: 4px;
+    padding: 8px 16px;
+    cursor: pointer;
 }
 .btn.primary{
     background: #337ab7;
